--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="product">
         <img src="https://placekitten.com/200/200" alt="Product Image">
         <div>
-            <h2>Apple Polaroid Camera</h2>
+            <h2> Polaroid Camera</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquam odio vel tincidunt consequat.</p>
             <p>Price: $199</p>
         </div>
